--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,9 +1,5 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: CI/CD Pipeline
 
-# Trigger the workflow on every push to the main branch
 on:
   push:
     branches:
@@ -14,17 +10,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Check out the code
     - name: Check out repository code
       uses: actions/checkout@v2
 
-    # Step 2: Set up Python environment
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
 
-    # Step 3: Install dependencies
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -32,12 +25,13 @@ jobs:
 
     - name: List files for debugging
       run: |
-          ls -R
-          pwd  # Print current directory
-      
+        ls -R
+        pwd  # Print current directory
 
-    # Step 4: Run tests using pytest
+    - name: List tests directory contents
+      run: |
+        ls -R tests
+
     - name: Run tests
       run: |
-        pytest
-
+        pytest -v
